[package]
name = "strmode"
version = "1.0.0"
description = "strmode(3)"
authors = ["colvin <39858617+colvin@users.noreply.github.com>"]
license = "MIT"
homepage = "https://github.com/colvin/strmode"
repository = "https://github.com/colvin/strmode"
edition = "2018"

[badges]
travis-ci = { repository = "colvin/strmode", branch = "master" }

[dependencies]
